<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Context Providers - ClientApp</string>
    <string name="action_settings">Settings</string>
    <string name="start_service">Start service</string>
    <string name="stop_service">Stop service</string>
    <string name="bind_service">Bind service</string>
    <string name="unbind_service">Unbind services</string>
    <string name="context_providers_service_connected">Context Providers service connected!</string>
    <string name="context_providers_service_disconnected">Context Providers service disconnected!</string>
    <string name="request_context_data_01">Request Barometer data</string>
    <string name="request_context_data_02">Request Photometer data</string>
    <string name="request_context_data_response_success">Request context data response success: %1$s</string>
    <string name="request_context_data_response_error">Request context data response error: %1$d</string>
</resources>
