<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/container"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context=".MainActivity" tools:ignore="MergeRootFrame" >

    <RelativeLayout
        tools:context=".MainActivity$PlaceholderFragment"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_gravity="left|top">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_service"
            android:id="@+id/buttonStartServices"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="40dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_service"
            android:id="@+id/buttonStopServices"
            android:layout_toEndOf="@+id/buttonStartServices"
            android:layout_alignParentTop="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bind_service"
            android:id="@+id/buttonBindServices"
            android:layout_marginTop="47dp"
            android:layout_below="@+id/buttonStartServices"
            android:layout_alignStart="@+id/buttonStartServices" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unbind_service"
            android:id="@+id/buttonUnbindServices"
            android:layout_alignTop="@+id/buttonBindServices"
            android:layout_toEndOf="@+id/buttonStartServices" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_context_data_01"
            android:id="@+id/buttonRequestContext01"
            android:layout_below="@+id/buttonBindServices"
            android:layout_alignStart="@+id/buttonBindServices"
            android:layout_marginTop="37dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_context_data_02"
            android:id="@+id/buttonRequestContext02"
            android:layout_below="@+id/buttonRequestContext01"
            android:layout_alignStart="@+id/buttonRequestContext01" />
    </RelativeLayout>
</FrameLayout>
